--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Aptly - Digital Innovation Company</title>
+    <title>Vessels - Social Technology</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/freelancer.min.css" rel="stylesheet">
+    <link href="css/freelancer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -37,12 +37,13 @@
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
         <div class="container">
+
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Aptly</a>
+                <a class="navbar-brand" href="#page-top">Vessels</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -66,25 +67,94 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
+
+
         </div>
         <!-- /.container-fluid -->
     </nav>
 
     <!-- Header -->
     <header>
-        <div class="container" id="maincontent" tabindex="-1">
-            <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
-                    <div class="intro-text">
-                        <h1 class="name">Aptly</h1>
-                        <hr class="star-light">
-                        <span class="skills">Digital Innovation for the Developing World</span>
-                    </div>
+      <img class="banner-image" src="img/clay_2.jpg"/>
+      <div class="overlay" id="maincontent" tabindex="-1">
+        <div class="intro-text">
+            <!-- <hr class="star-light"> -->
+            <h1 class="name">Social Technology for the Developing World</h1>
+            <!-- <img class="star" src="img/star.svg"/> -->
+            <!-- <span class="skills">Lorem ipsum dolor</span> -->
+        </div>
+      </div>
+    </header>
+
+    <section id="what_we_do">
+      <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>What we do</h2>
+                <!-- <hr class="star-primary"> -->
+            </div>
+        </div>
+
+        <div class="row">
+
+          <div class="col-sm-4 portfolio-item-container">
+            <div class="portfolio-item text-center">
+              <div class="icon-circle text">
+                <i class="fa fa-lightbulb-o text-center" aria-hidden="true"></i>
+              </div>
+              <h4>Research</h4>
+              <div>
+                <p>We research shit. And we're good at it.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4 portfolio-item-container">
+            <div class="portfolio-item text-center">
+              <div class="icon-circle text">
+                <i class="fa fa-code" aria-hidden="true"></i>
+              </div>
+              <h4>Software Developent</h4>
+              <div>
+                <p>We write shit. And we're good at it.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4 portfolio-item-container">
+            <div class="portfolio-item text-center">
+              <div class="icon-circle text">
+                <i class="fa fa-cogs" aria-hidden="true"></i>
+              </div>
+              <h4>Data Analysis</h4>
+              <div>
+                <p>We analyse shit. And we're good at it.</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="success" id="see_our_work" >
+      <div class="container-fluid">
+        <div class="row big-links">
+            <div class="col-md-6 big-link">
+                <div class="text-container text-center">
+                  <h3 class="balance-text">Read some of our code</h3>
+                  <button class="btn btn-lg btn-outline text-center" type="button">GitHub</button>
+                </div>
+            </div>
+            <div class="col-md-6 big-link">
+                <div class="text-container text-center">
+                  <h3 class="balance-text">Check out our Medium Blog</h3>
+                  <button class="btn btn-lg btn-outline" type="button">Medium</button>
                 </div>
             </div>
         </div>
-    </header>
+      </div>
+    </section>
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
@@ -92,68 +162,23 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Our Projects</h2>
-                    <hr class="star-primary">
+                    <hr>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal1" class="" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="Cabin">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                        <div class="portfolio-icon">
+                          <img src="img/portfolio/mywell.jpg" class="img-responsive" alt="Cabin">
+                          <div clas="portfolio-content center-text">
+                            <h4>MyWell</h4>
+                            <p>Water Tracking and Management in rural India</p>
+                          </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="Slice of cake">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="Circus tent">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="Game controller">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="Safe">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="Submarine">
                     </a>
                 </div>
             </div>
@@ -184,59 +209,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Contact Section -->
-    <!-- <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Contact Us</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="name">Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="email">Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="phone">Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="message">Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- Footer -->
     <footer class="text-center">
@@ -279,7 +251,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Aptly Technologies Inc. 2017
+                        Copyright &copy; Vessels Technologies Inc. 2017
                     </div>
                 </div>
             </div>
