remove profanity, quick fix

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                         <a href="#contact">Contact</a>
                     </li> -->
                     <li class="">
-                        <a href="https://medium.com/aptly">Blog</a>
+                        <a href="https://medium.com/vessels">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -104,7 +104,7 @@
               </div>
               <h4>Research</h4>
               <div>
-                <p>We research shit. And we're good at it.</p>
+                <p>We research IT projects for development. And we love it.</p>
               </div>
             </div>
           </div>
@@ -116,7 +116,7 @@
               </div>
               <h4>Software Developent</h4>
               <div>
-                <p>We write shit. And we're good at it.</p>
+                <p>We build software systems. And we're rather good at it.</p>
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
               </div>
               <h4>Data Analysis</h4>
               <div>
-                <p>We analyse shit. And we're good at it.</p>
+                <p>We crunch numbers and make pretty reports with infographics.</p>
               </div>
             </div>
           </div>
@@ -143,13 +143,13 @@
             <div class="col-md-6 big-link">
                 <div class="text-container text-center">
                   <h3 class="balance-text">Read some of our code</h3>
-                  <button class="btn btn-lg btn-outline text-center" type="button">GitHub</button>
+                  <a class="btn btn-lg btn-outline text-center" type="button" href="https://github.com/vessels-tech">GitHub</a>
                 </div>
             </div>
             <div class="col-md-6 big-link">
                 <div class="text-container text-center">
                   <h3 class="balance-text">Check out our Medium Blog</h3>
-                  <button class="btn btn-lg btn-outline" type="button">Medium</button>
+                  <a class="btn btn-lg btn-outline" type="button" href="https://medium.com/vessels">Medium</a>
                 </div>
             </div>
         </div>
@@ -186,7 +186,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <!-- <section class="success" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -208,14 +208,14 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>Location</h3>
                         <p>Adelaide, 5000
                           <br />SA, Australia</p>
@@ -240,7 +240,7 @@
                             </li>
                         </ul>
                     </div> -->
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>Get In Touch</h3>
                         <p>Lewis Daly, CTO<br /><a href="mailto:lewisdaly@me.com?Subject=Hello" target="_top">lewisdaly@me.com</a></p>
                     </div>
