--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-6 portfolio-item">
-                    <a href="/mywell.html" target="_blank">
+                    <a href="/mywell.html">
                         <div class="caption">
                             <div class="caption-content">
                             </div>
