Almost finished mywell page

--- a/public/mywell.html
+++ b/public/mywell.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vessels - Social Technology</title>
+    <title>MyWell - Well Monitoring Tool</title>
 
     <!--  OG Info -->
     <meta property="og:title" content="Digital Tools for the Developing World" />
@@ -63,7 +63,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/">Vessels</a>
+                <a class="navbar-brand" href="/">MyWell</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -90,14 +90,127 @@
 
     <!-- Header -->
     <header>
-      <img class="banner-image" src="img/portfolio/mywell.jpg"/>
-      <div class="overlay" id="maincontent" tabindex="-1">
+      <div class="promo-banner" id="maincontent" tabindex="-1">
         <div class="intro-text">
             <h1 class="name">MyWell</h1>
-            <h3>Crowdsourced well monitoring</h3>
+            <h2>Collect water data from anyone. Anywhere.</h2>
         </div>
+        <div class="banner-buttons">
+          <div class="row">
+              <div class="col-sm-4">
+                <div class="filler"></div>
+              </div>
+              <div class="col-sm-2">
+                  <div class="text-container text-center">
+                    <a class="btn btn-lg btn-outline text-center" type="button" href="https://github.com/vessels-tech">Google Play</a>
+                  </div>
+              </div>
+              <div class="col-sm-2">
+                  <div class="text-container text-center">
+                    <a class="btn btn-lg btn-outline" type="button" href="https://medium.com/vessels">MyWell Web</a>
+                  </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="filler"></div>
+              </div>
+        </div>
+        <img class="top-image" src="img/overlapping.png" />
       </div>
     </header>
+
+    <section id="one_line">
+      <div class="container">
+          <div class="text-container text-center">
+          <h3>
+            We built MyWell to get a clear picture of the water situation, and give ownership to the very people relying on it for their livelyhoods.
+          </h3>
+        </div>
+      </div>
+    </section>
+
+    <section class="accent" id="what_it_does">
+      <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>What it does</h2>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-4 portfolio-item-container">
+            <div class="portfolio-item text-center">
+              <div class="icon-circle text">
+                <i class="fa fa-connectdevelop text-center" aria-hidden="true"></i>
+              </div>
+              <div>
+                <p>Crowdsources data from a network of volunteers.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 portfolio-item-container">
+            <div class="portfolio-item text-center">
+              <div class="icon-circle text">
+                <i class="fa fa-users" aria-hidden="true"></i>
+              </div>
+              <div>
+                <p>Gives data back to the people who need it.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 portfolio-item-container">
+            <div class="portfolio-item text-center">
+              <div class="icon-circle text">
+                <i class="fa fa-home" aria-hidden="true"></i>
+              </div>
+              <div>
+                <p>Promotes engagement at a local level.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!--  TODO: links-->
+    <section id="in_the_news" >
+      <div class="text-container text-center">
+        <h2>In the news:</h2>
+        <hr />
+        <div class="row">
+          <div class="col-sm-6 portfolio-item-container">
+            <div class="portfolio-item text-center">
+              <a href="http://www.financialexpress.com/india-news/mobile-application-for-data-on-groundwater-to-help-farmers/693683/" target="_blank"
+                <h4>Financial Express</h4>
+                <div>
+                  <p>"Mobile application for data on groundwater to help farmers"</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-6 portfolio-item-container">
+            <div class="portfolio-item text-center">
+              <a href="http://timesofindia.indiatimes.com/city/ahmedabad/state-using-72-of-its-groundwater/articleshow/58917592.cms" target="_blank"
+                <h4>The Times of India</h4>
+                <div>
+                  <p>"Gujarat using 72% of its groundwater"</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="accent" id="get_in_touch" >
+      <div class="text-container text-center">
+        <h2>Interested in MyWell for your project?</h2>
+        <h3>So are we!</h3>
+          <a class="btn btn-lg btn-outline" type="button" href="mailto:lewis@vesselstech.com?Subject=MyWell%20Info">Get In Touch</a>
+      </div>
+    </section>
 
     <section id="mywell">
       <div class="container">
@@ -125,7 +238,35 @@
       </div>
     </section>
 
+    <section class="" id="one_line">
+      <div class="container">
+        <div class="text-container text-center">
+          <h2>Stay up to date with MyWell</h2>
+          <br />
+          <!-- Begin MailChimp Signup Form -->
+          <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+          <style type="text/css">
+          	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+          	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+          	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+          </style>
+          <div id="mc_embed_signup">
+          <form action="//vesselstech.us15.list-manage.com/subscribe/post?u=145bb0ab58d995db01931d6a1&amp;id=b984f61fa4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
 
+          	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_145bb0ab58d995db01931d6a1_b984f61fa4" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+          </form>
+          </div>
+
+          <!--End mc_embed_signup-->
+
+        </div>
+      </div>
+    </section>
 
 
     <!-- Footer -->
