--- a/public/mywell.html
+++ b/public/mywell.html
@@ -73,13 +73,10 @@
                         <a href="/#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/#about">About</a>
+                        <a href="/mywell.html#what_it_does">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/#portfolio">Portfolio</a>
-                    </li>
-                    <li class="">
-                        <a href="https://medium.com/vessels">Blog</a>
+                        <a href="/mywell.html#get_in_touch">Get In Touch</a>
                     </li>
                 </ul>
             </div>
@@ -102,12 +99,12 @@
               </div>
               <div class="col-sm-2">
                   <div class="text-container text-center">
-                    <a class="btn btn-lg btn-outline text-center" type="button" href="https://github.com/vessels-tech">Google Play</a>
+                    <a class="btn btn-lg btn-outline text-center" type="button" href="https://play.google.com/store/apps/details?id=com.ionicframework.ionicrainapp175406&hl=en">Google Play</a>
                   </div>
               </div>
               <div class="col-sm-2">
                   <div class="text-container text-center">
-                    <a class="btn btn-lg btn-outline" type="button" href="https://medium.com/vessels">MyWell Web</a>
+                    <a class="btn btn-lg btn-outline" type="button" href="https://mywell.marvi.org.in">MyWell Web</a>
                   </div>
               </div>
               <div class="col-sm-4">
@@ -122,7 +119,7 @@
       <div class="container">
           <div class="text-container text-center">
           <h3>
-            We built MyWell to get a clear picture of the water situation, and give ownership to the very people relying on it for their livelyhoods.
+            We built MyWell to get a clear picture of the water situation, and give ownership to the very people relying on water for their livelyhoods.
           </h3>
         </div>
       </div>
@@ -218,20 +215,20 @@
         <div id="readme" class="readme blob instapaper_body">
           <article class="markdown-body entry-content" itemprop="text">
             <h2>What is it</h2>
-            <p>MyWell is a Smartphone and SMS app for tracking wells in MARVI. The app works by crowdsourcing well, rainfall and checkdam readings from MARVI's network of BJs. MyWell displays the current status of each well, as well as historical and village level data for simple comparison and analysis.</p>
+            <p>MyWell is a Smartphone and SMS app for tracking water data. The app works by crowdsourcing well, rainfall and checkdam readings from a network of volunteers. MyWell displays the current status of each well, as well as historical and village level data for simple comparison and analysis.</p>
             <p><a href="https://github.com/lewisdaly/mywell-server/blob/master/paper/image-1-screenshots.png" target="_blank"><img src="https://github.com/lewisdaly/mywell-server/raw/master/paper/image-1-screenshots.png" alt="screenshots" style="max-width:100%;"></a></p>
             <h2>How it works</h2>
             <h3>Readings &amp; Visualisation</h3>
-            <p>When a BJ takes a reading from a well, rainfall station or checkdam, they can use MyWell to submit it immediately. Either with a Smartphone or over SMS, all they need to do is fill in a simple form. This eliminates the need to use paper based systems, and allows for immediate feedback for the farmers relying on MyWell. Once a BJ saves a reading in the MyWell system, anyone can access it at a later date for statistics and data analysis.</p>
+            <p>When a voluneteer takes a reading from a well, rainfall station or checkdam, they can use MyWell to submit it immediately. Either with a Smartphone or over SMS, all they need to do is fill in a simple form. This eliminates the need to use paper based systems, and allows for immediate feedback for the farmers relying on MyWell. Once a reading has been recorded, anyone can access it at a later date for statistics and data analysis.</p>
             <p><a href="https://github.com/lewisdaly/mywell-server/blob/master/paper/image-2-submission.png" target="_blank"><img src="https://github.com/lewisdaly/mywell-server/raw/master/paper/image-2-submission.png" alt="screenshots" style="max-width:100%;"></a></p>
-            <p>With a network of BJs collecting data, MyWell is able to provide valuable insights to farmers. MyWell displays simple graphs; snapshots of the readings from a Well, Raingauge or Checkdam over the last 3 years.  MyWell also calculates village level statistics. These statistics let farmers  compare and benchmark their wells against one another.</p>
+            <p>Powered by a distributed data collection network, MyWell provides valuable insights to farmers. MyWell displays simple graphs; snapshots of the readings from a Well, Raingauge or Checkdam over the last 3 years.  MyWell also calculates village level statistics. These statistics let farmers  compare and benchmark their wells against one another.</p>
             <p><a href="https://github.com/lewisdaly/mywell-server/blob/master/paper/image-3-visualisations.png" target="_blank"><img src="https://github.com/lewisdaly/mywell-server/raw/master/paper/image-3-visualisations.png" alt="screenshots" style="max-width:100%;"></a></p>
             <h3>Management</h3>
-            <p>MyWell also has a host of tools for BJs to manage the MyWell system. BJs can register a new Well, Rainfall Station or Checkdam - using their device's inbuilt GPS to pinpoint the location.</p>
+            <p>MyWell also has a host of tools to manage the MyWell system. Anyone can register a new Well, Rainfall Station or Checkdam - using their device's inbuilt GPS to pinpoint the location.</p>
             <p>MyWell also has a 'Banner Image' feature. Each well can have a unique Banner Image - usually of the well and farmer -  allowing for greater personalisation and buy-in from farmers.</p>
-            <p>Finally, MyWell allows admins to upload a large number of readings at a time. This allows an import of large amounts of historical data; increasing the immediate value of MyWell to the farmers.</p>
+            <p>Finally, MyWell allows administrators to upload a large number of readings at a time. This allows an import of large amounts of historical data; increasing the immediate value of MyWell to the farmers.</p>
             <h2>Next Steps for MyWell</h2>
-            <p>In the next phase, MyWell will be scaled from 10 to 100 villages, onto several orders of magnitude larger. This means making improvements to the features that make up the self-managed MyWell network. MyWell's analytics and visualisation features will be improved to allow for better groundwater visibility for farmers. This will also help cater to the science and research aspects of MyWell and MARVI as a whole.</p>
+            <p>In the next phase, MyWell will be scaled from 10 to 100 villages, onto several orders of magnitude larger. This means making improvements to the features that make up the self-managed MyWell network. MyWell's analytics and visualisation features will be improved to allow for better groundwater visibility for farmers. This will also help cater to the science and research aspects of MyWell and it's parent project, MARVI as a whole.</p>
             <p>As far as app features go, MyWell needs to learn a few new languages; especially Gujarati and Rajasthani. The SMS features of MyWell are targeted for improvement - with modern Chatbot and AI technologies. The goal is to make interacting with MyWell over SMS easier and more conversational.</p>
           </article>
         </div>
