--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
                                 <a href="https://twitter.com/lewdaly" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="linkedin.com/in/lewis-daly-2061a273" class="btn-social btn-outline"><span class="sr-only">Linkedin</span><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://linkedin.com/in/lewis-daly-2061a273" class="btn-social btn-outline"><span class="sr-only">Linkedin</span><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
