minor updates to add 4pbot

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vessels - Social Technology</title>
+    <title>Vessels Tech - Social Technology</title>
 
     <!--  OG Info -->
     <meta property="og:title" content="Digital Tools for the Developing World" />
-    <meta property="og:site_name" content="Vessels" />
+    <meta property="og:site_name" content="Vessels Tech" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Vessels builds technology for social impact in developing countries. We ride the line between research, consulting, and working on our own products and innovations." />
+    <meta property="og:description" content="Vessels Tech builds technology for social impact in developing countries. We ride the line between research, consulting, and working on our own products and innovations." />
     <meta property="og:image" content="img/logo-3.png"/>
     <meta property="og:url" content="https://vesselstech.com" />
 
@@ -63,7 +63,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Vessels</a>
+                <a class="navbar-brand" href="#page-top">Vessels Tech</a>
             </div>
 
             <!-- <img class="col-md-2" src="img/logo.svg" alt="vessels-logo"/> -->
@@ -110,7 +110,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-4">
-                    <p>Vessels builds technology for social impact in developing countries. We ride the line between research, consulting, and working on our own products and innovations.</p>
+                    <p>Vessels Tech builds technology for social impact in developing countries. We ride the line between research, consulting, and working on our own products and innovations.</p>
                 </div>
             </div>
         </div>
@@ -159,7 +159,7 @@
               </div>
               <h4>Data Analysis</h4>
               <div>
-                <p>We crunch numbers and make pretty reports with infographics.</p>
+                <p>We crunch numbers and make pretty reports with pretty infographics.</p>
               </div>
             </div>
           </div>
@@ -197,7 +197,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 portfolio-item">
+
+                <div class="col-sm-4 portfolio-item">
                     <a href="/mywell.html">
                         <div class="caption">
                             <div class="caption-content">
@@ -212,7 +213,24 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
+
+                <div class="col-sm-4 portfolio-item">
+                    <a href="https://4pbot.com">
+                        <div class="caption">
+                            <div class="caption-content">
+                            </div>
+                        </div>
+                        <div class="portfolio-icon">
+                          <img src="img/portfolio/4pbot.png" class="img-responsive" alt="mywell-hands">
+                          <div clas="portfolio-content center-text">
+                            <h4>4PBot</h4>
+                            <p>A financial inclusion chatbot for Filipinos on Social Welfare</p>
+                          </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-4 portfolio-item">
                     <a href="https://smscollect.xyz" target="_blank">
                         <div class="caption">
                             <div class="caption-content">
@@ -265,7 +283,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Vessels Technologies Inc. 2017
+                        Copyright &copy; 2017 Vessels Tech Pty Ltd </br> ABN: 45 620 974 334
                     </div>
                 </div>
             </div>
